# json-viewer

./: LICENSE  NOTICE  README.md  json-viewer.spec  pyproject.toml
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md
scripts/: build.sh
src/json_viewer/: __init__.py  __main__.py  app.py
src/json_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/json_viewer/adapters/: __init__.py  base.py  json_adapter.py  types.py  xml_adapter.py  yaml_adapter.py
src/json_viewer/export/: image_export.py
src/json_viewer/graph/: collapse.py  data_edit.py  layout.py  models.py  parser.py  schema.py  sizing.py  table_data.py
src/json_viewer/lint/: linter.py
src/json_viewer/ui/: editor.py  graph_canvas.py  graph_edit_dialog.py  graph_items.py  help_dialogs.py  main_window.py  search_bar.py  table_view.py  theme.py  toolbar.py  widgets.py  zoom_control.py
tests/: test_data_edit.py  test_graph_items.py  test_linter.py  test_parser.py  test_schema.py  test_table_data.py  test_table_view.py
